[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Art/progress_bar.tres" type="Theme" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="CircleShape2D" id=2]
radius = 234.077

[node name="Enemy" type="KinematicBody2D"]
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Zone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone"]
visible = false
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 40, 0 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -32.0
margin_top = -50.0
margin_right = 32.0
margin_bottom = -36.0
theme = ExtResource( 3 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="Zone" to="." method="_on_Zone_body_entered"]
[connection signal="body_exited" from="Zone" to="." method="_on_Zone_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
